# automate

./: Cargo.toml
report/test/: Nmap_scan.txt  nikto.txt  nmap_http.txt
src/: client.rs  comands.json  database.json  lib.rs  server.rs
src/database/: database.rs
src/server_lib/: mod.rs  server_lib.rs
