[package]
name = "automate"
version = "0.1.0"
authors = ["knuckerr <johnkalafatasb@gmail.com>"]
edition = "2018"



[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "client"
path = "src/client.rs"




[dependencies]
regex = "1"
serde_json = "1.0"
serde = "1"
serde_derive = "1"
tokio = "0.1"
tokio-threadpool = "0.1.6"
futures = "0.1"
postgres = "0.15"
nix = "0.12.0"
